--- a/datausa/assets/scss/elements/_home_m.scss
+++ b/datausa/assets/scss/elements/_home_m.scss
@@ -66,7 +66,7 @@ body.home {
       margin: 0 0 50px;
 
       img {
-        height: 75px;
+        height: 55px;
       }
     }
 
