--- a/datausa/static/css/site.css
+++ b/datausa/static/css/site.css
@@ -3213,7 +3213,7 @@
       display: -webkit-flex;
       display: flex;
       padding: 0 15px; }
-      @media only screen and (max-width: 900px) {
+      @media only screen and (max-width: 1200px) {
         body.home .feed-flex {
           -webkit-flex-wrap: wrap;
           -ms-flex-wrap: wrap;
@@ -3358,38 +3358,30 @@
         -ms-flex: 1;
         flex: 1;
         margin: 10px 15px 25px;
-        min-width: 250px; }
+        min-width: 225px; }
         body.home #feed.carousel.primary {
           display: inline-block; }
           body.home #feed.carousel.secondary {
             display: none; }
-            @media only screen and (max-width: 1700px) {
+            @media only screen and (max-width: 1800px) {
               body.home #feed.carousel.rank-cip.primary {
                 display: none;   }
                 body.home #feed.carousel.rank-cip.secondary {
                   display: inline-block;   }
 }
-        @media only screen and (max-width: 1500px) {
+        @media only screen and (max-width: 1600px) {
           body.home #feed.carousel.rank-naics.primary {
             display: none;   }
             body.home #feed.carousel.rank-naics.secondary {
               display: inline-block;   }
 }
-        @media only screen and (max-width: 1300px) {
+        @media only screen and (max-width: 1400px) {
           body.home #feed.carousel.rank-cart.primary {
             display: none;   }
             body.home #feed.carousel.rank-cart.secondary {
               display: inline-block;   }
 }
-        @media only screen and (max-width: 1100px) {
-          body.home #feed.carousel.rank-story.primary {
-            display: none;   }
-            body.home #feed.carousel.rank-story.secondary {
-              display: inline-block;   }
-              body.home #feed.carousel.rank-cip.secondary {
-                display: none;   }
-}
-        @media only screen and (max-width: 900px) {
+        @media only screen and (max-width: 1200px) {
           body.home #feed.carousel.secondary {
             display: none !important;   }
             body.home #feed.carousel.primary {
@@ -3475,7 +3467,7 @@
       body.home .home-collab {
         margin: 0 0 50px;   }
         body.home .home-collab img {
-          height: 75px;   }
+          height: 55px;   }
     body.home #feed .feed-box.featured .feed-box-title {
       font-size: 32px;   }
 }
